# doom-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
native/: dg_rust.c  dg_rust.h  dg_sound.c
src/: dg_get_key.rs  dg_init.rs  draw_frame.rs  exit.rs  get_ticks.rs  globals.rs  main.rs  sound.rs  window.rs
