[package]
name = "doom-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
]}
rodio = "0.21.1"

[build-dependencies]
cc = "1.0"
